examples/test/testpolicy5588.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5588
  namespace: namespace57
spec:
  podSelector:
    matchLabels:
      key30: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value32
          key6: value15
          key0: value26
      podSelector:
        matchLabels:
          key34: value35
          key22: value12
          key39: value40
